--- a/www-offshoot.yml
+++ b/www-offshoot.yml
@@ -2,6 +2,5 @@ docroot: build
 scripts:
   branch:
     start:
-      - export npm_config_cache=/tmp/npm
-      - npm i
-      - npm run build
+      - HOME=/tmp  npm i
+      - HOME=/tmp  npm run build
